# roles

./: LICENSE  README.md  alembic.ini  pyproject.toml  requirements.txt  scope.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
alembic/: env.py
alembic/versions/: 001_create_address_and_user_table.py
app/: __init__.py  database.py  engine.py  main.py  settings.py
app/models/: __init__.py  address.py  user.py
