[project]
name = "roles"
version = "0.1.0"
description = "User roles and permissions"
authors = [{ name = "---", email = "abc@email.com" }]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi[standard]>=0.115.5",
    "SQLAlchemy>=2.0.36",
    "alembic>=1.14.1",
    "pydantic-settings>=2.7.1",
    "psycopg2-binary>=2.9.10",
]

[tool.pdm.dev-dependencies]
dev = ["pytest>=6.2.4"]

[tool.pdm] # install dependencies in a virtual environment
install.isolated = false

[tool.pdm.scripts]


create_migration = "alembic revision --autogenerate -m" # <'message'>
add_migration = "alembic revision -m" # <'message'>
migrate = "alembic upgrade head" # apply migrations from alembic/versions

# pdm run <script_name>
start = "uvicorn app.main:app --reload"
install = "pdm install --venv --no-self -v --prod"
install_all = "pdm install --venv --no-self -v"

requirements = "pdm export -f requirements --without-hashes --pyproject --prod -v --output requirements.txt"
requirements_all = "pdm export -f requirements --without-hashes --pyproject -v --output requirements.txt" # include dev dependencies